feat: gallery and share added

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,3 +1,11 @@
 .btn {
   @apply h-10 font-semibold text-white bg-teal-900 px-6 py-2 rounded-md cursor-pointer shadow-lg;
 }
+
+.input {
+  @apply block w-full text-sm text-slate-500
+  file:mr-4 file:py-2 file:px-4
+  file:rounded-full file:border-0
+  file:text-sm file:font-semibold
+  file:bg-violet-50;
+}
